changed some format

--- a/p8105_hw1_wc2788.md
+++ b/p8105_hw1_wc2788.md
@@ -5,7 +5,7 @@ Wen Cheng
 
 ## Problem 1
 
-\#\#\#\#Create a data frame comprised of:
+### Create a data frame comprised of:
 
 1.  a random sample of size 10 from a standard Normal distribution
 2.  a logical vector indicating whether elements of the sample are
@@ -22,7 +22,7 @@ dataframe = tibble(
 )
 ```
 
-\#\#\#\#Take the mean of each variable
+### Take the mean of each variable
 
 ``` r
 #use pull() to pull the variable out of the dataframe
@@ -30,14 +30,14 @@ dataframe = tibble(
 mean(pull(dataframe,random_sample))
 ```
 
-    ## [1] 0.2688019
+    ## [1] 0.2328348
 
 ``` r
 #logical vector
 mean(pull(dataframe,logical_vec))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.5
 
 ``` r
 #character vector
@@ -61,8 +61,7 @@ mean(pull(dataframe,factor_vec))
 
 can take the mean of numbers and logical but not character or factor
 
-\#\#\#\#Applies the as.numeric function to the logical, character and
-factor
+### Applies the as.numeric function to the logical, character and factor
 
 ``` r
 #logical vector
@@ -92,7 +91,7 @@ objects.
 
 ## Problem 2
 
-\#\#\#\#Load the penguins dataset
+### Load the penguins dataset
 
 ``` r
 data("penguins", package = "palmerpenguins")
@@ -114,13 +113,15 @@ print(penguins)
     ## 10 Adelie  Torgersen           42            20.2               190        4250
     ## # … with 334 more rows, and 2 more variables: sex <fct>, year <int>
 
+### Short description of the penguins dataset
+
 The penguins dataset contains penguin species (Adelie, Chinstrap,
 Gentoo), islands( Biscoe, Dream, Torgersen) and bill length, bill depth,
 flipper length, body mass, sex, and year.  
 The dataset has 344 rows and 8 columns.  
 The mean flipper length is 200.9152047 mm.
 
-\#\#\#\#Scatterplot
+### Scatterplot
 
 ``` r
 #make a scatterplot
