--- a/p8105_hw1_wc2788.Rmd
+++ b/p8105_hw1_wc2788.Rmd
@@ -11,7 +11,7 @@ library(tidyverse)
 ```
 
 ## Problem 1
-####Create a data frame comprised of:    
+### Create a data frame comprised of:    
 
 1. a random sample of size 10 from a standard Normal distribution
 2. a logical vector indicating whether elements of the sample are greater than 0
@@ -27,7 +27,7 @@ dataframe = tibble(
 )
 ```
 
-####Take the mean of each variable
+### Take the mean of each variable
 ```{r}
 #use pull() to pull the variable out of the dataframe
 #random sample / numbers vector
@@ -41,7 +41,7 @@ mean(pull(dataframe,factor_vec))
 ```
 can take the mean of numbers and logical but not character or factor
 
-####Applies the as.numeric function to the logical, character and factor
+### Applies the as.numeric function to the logical, character and factor
 ```{r, eval=FALSE}
 #logical vector
 as.numeric(pull(dataframe,logical_vec))
@@ -61,16 +61,17 @@ It also explained why logical vector has a mean, but factor and character not. I
 
 
 ## Problem 2
-####Load the penguins dataset
+### Load the penguins dataset
 ```{r}
 data("penguins", package = "palmerpenguins")
 print(penguins)
 ```
+### Short description of the penguins dataset
 The penguins dataset contains penguin species (`r paste(levels(penguins$species), collapse = ", ")`), islands( `r paste(levels(penguins$island), collapse = ", ")`) and bill length, bill depth, flipper length, body mass, sex, and year.   
 The dataset has `r nrow(penguins)` rows and `r ncol(penguins)` columns.   
 The mean flipper length is `r mean(penguins$flipper_length_mm,na.rm=TRUE)` mm. 
 
-####Scatterplot
+### Scatterplot
 ```{r, warning=FALSE}
 #make a scatterplot
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
